--- a/Labs/lab08.Rmd
+++ b/Labs/lab08.Rmd
@@ -319,14 +319,17 @@ Now we want to transition to building real design matrices for prediction. This 
 Suppose we wish to predict the following: given the first three readings of a storm, can you predict its maximum wind speed? Identify the `y` and identify which features you need $x_1, ... x_p$ and build that matrix with `dplyr` functions. This is not easy, but it is what it's all about. Feel free to "featurize" as creatively as you would like. You aren't going to overfit if you only build a few features relative to the total 198 storms.
 
 ```{r}
-storms[,max_wind_speed:=max(wind),by=name]
+storms[,max_wind_speed:=max(wind),by=.(name,year)]
 storms[, .SD[1:3], by = name]
+Xy = first_three_readings = storms[, .(last_status = .SD[3,status], max_category = max(category), max_wind_thus_far = max(wind), min_pressure = min(pressure), max_pressure = max(pressure))]
+
 ```
 
 Fit your model. Validate it. 
  
 ```{r}
-#TO-DO
+lm_mod = lm(y~.-name,Xy)
+summary(lm_mod)
 ```
 
 Assess your level of success at this endeavor.
