--- a/Labs/lab08_09.Rmd
+++ b/Labs/lab08_09.Rmd
@@ -414,11 +414,7 @@ ggplot(storms_data_long %>% filter(name %in% storms_sample))+
   facet_wrap(name ~.,nrow=2)
 ```
 
-#
-#
-# LAB 9 BELOW
-#
-#
+
 In this next first part of this lab, we will be joining three datasets in an effort to make a design matrix that predicts if a bill will be paid on time. Clean up and load up the three files. Then I'll rename a few features and then we can examine the data frames:
 
 ```{r}
@@ -462,11 +458,9 @@ How should you add features from transformations (called "featurization")? What 
 
 ```{r}
 pacman::p_load(lubridate)
-#convert discount types to factors and include missingness as a legal level
 bills_with_payments_with_discounts[, discount_num_days := factor(num_days, exclude = NULL)]
 bills_with_payments_with_discounts[, discount_pct_off := factor(pct_off, exclude = NULL)]
 bills_with_payments_with_discounts[, discount_days_until_discount := factor(days_until_discount, exclude = NULL)]
-
 #compute number of days bill is due in
 bills_with_payments_with_discounts[, num_days_to_pay := as.integer(ymd(due_date) - ymd(invoice_date))]
 bills_data = bills_with_payments_with_discounts[, .(
@@ -479,10 +473,15 @@ bills_data = bills_with_payments_with_discounts[, .(
     discount_days_until_discount = first(days_until_discount)
   ), by = id]
 
-bills_data[,discount_pct_off := factor(discount_days_until_discount, exclude = NULL)]
+
+bills_data[,discount_pct_off := factor(discount_days_until_discount)]
+bills_data[,discount_num_days := factor(discount_num_days)]
+bills_data[,discount_days_until_discount := factor(discount_days_until_discount)]
+
+
 #how many bills did this customer have previously?
 bills_data[, num_previous_bills_paid_on_time := 0 : (.N - 1), by = customer_id]
-
+levels(bills_data$discount_num_days)
 #and how many of those did he pay on time?
 bills_data[, num_previous_bills_paid_on_time := cumsum(paid_in_full), by = customer_id]
 bills_data[, customer_id := NULL] #no need for customer id anymore; it won't be a feature
@@ -505,8 +504,8 @@ test_indices = sample(1 : nrow(bills_data), round(nrow(bills_data) / K))
 train_indices = setdiff(1 : nrow(bills_data), test_indices)
 bills_data_test = bills_data[test_indices, ]
 bills_data_train = bills_data[train_indices,]
-
-
+#levels(bills_data_test$discount_num_days)
+#levels(bills_data_train$discount_num_days)
 ```
 
 Now try to build a classification tree model for `paid_in_full` with the features (use the `Xy` parameter in `YARF`). If you cannot get `YARF` to install, use the package `rpart` (the standard R tree package) instead. You will need to install it and read through some documentation to find the correct syntax.
@@ -514,19 +513,18 @@ Now try to build a classification tree model for `paid_in_full` with the feature
 Warning: this data is highly anonymized and there is likely zero signal! So don't expect to get predictive accuracy. The value of the exercise is in the practice. I think this exercise (with the joining exercise above) may be one of the most useful exercises in the entire semester.
 
 ```{r}
-
 pacman::p_load(YARF)
 options(java.parameters = "-Xmx8000m")
 library(rJava)
 .jinit()
 gc()
 
-n_sub_train = 2000
+n_sub_train = 20000
 bills_data_train_sub = bills_data_train[sample(1 : .N, n_sub_train)]
 Xtrain = bills_data_train_sub[, -"paid_in_full"]
 ytrain = bills_data_train_sub[, paid_in_full]
 classification_tree_mod = YARFCART(Xtrain, ytrain)
-
+classification_tree_mod$X
 
 ```
 
@@ -546,13 +544,14 @@ Predict on the test set and report the misclassifcation error
 
 ```{r}
 Xtest = bills_data_test[, -"paid_in_full"]
+
 ytest = bills_data_test[, paid_in_full]
 yhat_test = predict(classification_tree_mod, Xtest)
 mc_error_oos = mean(ytest != yhat_test)
 
 mc_error_oos
 
-bills_data
+
 ```
 
 ###### Everything below here is due with lab 9
@@ -605,8 +604,6 @@ Is this a good model? (yes/no and explain).
 There are probability asymmetric costs to the two types of errors. Assign the costs below and calculate oos total cost.
 
 ```{r}
-
-
 ```
 
 We now wish to do asymmetric cost classification. Fit a logistic regression model to this data.
@@ -614,9 +611,9 @@ We now wish to do asymmetric cost classification. Fit a logistic regression mode
 ```{r}
 logistic_mod = glm(ytrain ~ ., Xtrain, family = binomial(link = "logit"))
 
-p_hats_train = predict(logistic_mod, bills_data_train, type ="response")
+p_hats_test = predict(logistic_mod, Xtest, type="response")
 
-p_hats_test = predict(logistic_mod, bills_data_test, type="response")
+levels(Xtrain$discount_num_days)
 ```
 
 Use the function from class to calculate all the error metrics for the values of the probability threshold being 0.001, 0.002, ..., 0.999 in a data frame.
@@ -774,7 +771,7 @@ adult = adult[sample(1 : nrow(adult)), ]
 Copy from the previous lab all cleanups you did to this dataset.
 
 ```{r}
-#TO-DO
+#
 ```
 
 
@@ -807,7 +804,7 @@ logistic_mod = glm(ytrain ~ ., Xtrain, family = "binomial")
 and report the log scoring rule, the Brier scoring rule.
 
 ```{r}
-#TO-DO
+p_hats_test = predict(logistic_mod, Xtest, type = "response")
 ```
 
 We will be doing model selection using a basis of linear features consisting of all first-order interactions of the 14 raw features (this will include square terms as squares are interactions with oneself). 
